syntax = "proto3";

package auth_v1;

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option go_package = "auth/pkg/auth_v1:auth_v1";

service Auth {
    rpc Create(CreateRequest) returns (CreateRespone);         // Create - ручка создания нового пользователя в системе. 
    rpc Get(GetRequest) returns (GetResponse);                 // Get - ручка получения информации о пользователе по его идентификатору. 
    rpc Update(UpdateRequest) returns (google.protobuf.Empty); // Update - ручка обновления информации о пользователе по его идентификатору
    rpc Delete(DeleteRequest) returns (google.protobuf.Empty); // Delete - удаление пользователя из системы по его идентификатору. 
}

enum Role {
    guest = 0;
    user = 1;
    admin = 2;
}

message UserInfo {
    string name = 1;
    string email = 2;
    string password = 3;
    string password_confirm = 4;
    Role role = 5;
}

message User {
    int64 id = 1;
    UserInfo info = 2;
    google.protobuf.Timestamp created_at = 3;
    google.protobuf.Timestamp updated_at = 4;
}

message CreateRequest {
    UserInfo info = 1;
}

message CreateRespone {
    int64 id = 1;
}

message GetRequest {
    int64 id = 1;
}

message GetResponse {
    User user = 1;
}

message UpdateUserInfo {
    google.protobuf.StringValue name = 2;
    google.protobuf.StringValue email = 3;
}

message UpdateRequest {
    int64 id = 1;
    UpdateUserInfo info = 2;
}

message DeleteRequest {
    int64 id = 1;
}